--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <h5 class="card-title">CREATORS
         </h5>
           
-          <a href="https://xrguru.github.io/Creator/" class="btn btn-primary">Get Started</a>
+          <a href="https://xrguru.github.io/Creator/" target="_blank" class="btn btn-primary">Get Started</a>
         </div>
       </div>
               </div>
