--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="card-body">
                       <h5 class="card-title">INSTITUTIONS</h5>
                       
-                      <a href="#" class="btn btn-primary">Get Started</a>
+                      <a href="https://xrguru.github.io/Institutions/"target="_blank" class="btn btn-primary">Get Started</a>
                     </div>
                   </div>
               </div>
@@ -56,7 +56,7 @@
         <div class="card-body">
           <h5 class="card-title">INDIVIDUALS</h5>
          
-          <a href="#" class="btn btn-primary">Get Started</a>
+          <a href="https://xrguru.github.io/Individuals/" target="_blank" class="btn btn-primary">Get Started</a>
         </div>
       </div>
               </div>
