--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
-    <title>XR GURU Learning Hub --
-    Introduction to XRGURU Docs </title>
+    <title>XRGURU Docs: A Quick Overview</title>
 <head>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,7 +33,7 @@
         <img src="img/xrgurulogo.jpg" class="img-fluid" alt="...">
          
  <h6> Extended Realty Learning Hub  </h6>
-         <h4>Introduction to the XRGURU Docs</h4>
+         <h4>The XRGURU Docs: A Quick Overview</h4>
         </div> 
         <div class="container">
             <div class="row">
